fix today weather alignment in HTML

--- a/source/style.css
+++ b/source/style.css
@@ -164,6 +164,3 @@ h5 {
   text-align: right;
 }
 
-#dailyIcon {
-  text-align: right;
-}
